--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta charset='UTF-8'>
         <title>HTML - Matias</title>
 
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="text/javascript" href="scripts/script.js">
+
     </head>
 
     <body>
