--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>HTML - Matias</title>
 
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="text/javascript" href="scripts/script.js">
+        <script src="scripts/script.js" defer></script>
 
     </head>
 
