--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
         <title>HTML - Matias</title>
 
         <link rel="stylesheet" href="styles/styles.css">
-        <script src="scripts/script.js" defer></script>
 
     </head>
 
     <body>
 
-        <h1>Portfolio.</h1>
+        <header>
+
+            <h1>Portfolio - Matías Garrido</h1>
+
+        </header>
         
-        <p>Texto de prueba</p>
 
     </body>
 
