--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset='UTF-8'>
-        <title>HTML - Matias</title>
+        <title>Matias Garrido</title>
 
         <link rel="stylesheet" href="styles/styles.css">
 
@@ -14,7 +14,7 @@
 
         <header>
 
-            <h1>Portfolio - Matías Garrido</h1>
+            <h1>Portfolio - Matías Garrido.</h1>
 
             <nav>
                 <a class="main" href="inicio.html">Inicio</a>
