--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
             <h1>Portfolio - Matías Garrido</h1>
 
             <nav>
-                <a class="sec" href="inicio.html">Inicio</a>
+                <a class="sec" href="index.html">Inicio</a>
                 <a class="sec" href="biografia.html">Biografía</a>
                 <a class="sec" href="estudios.html">Estudios</a>
                 <a class="sec" href="experiencia.html">Experiencia</a>
