--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
             <nav>
                 <a class="main" href="index.html">Inicio</a>
-                <a class="sec" href="biografia.html">Biografía</a>
-                <a class="sec" href="estudios.html">Estudios</a>
-                <a class="sec" href="experiencia.html">Experiencia</a>
-                <a class="sec" href="contacto.html">Contacto</a>
+                <a class="sec" href="dir/biografia.html">Biografía</a>
+                <a class="sec" href="dir/estudios.html">Estudios</a>
+                <a class="sec" href="dir/experiencia.html">Experiencia</a>
+                <a class="sec" href="dir/contacto.html">Contacto</a>
             </nav>
         
         </header>
