--- a/dir/biografia.html
+++ b/dir/biografia.html
@@ -6,7 +6,7 @@
         <meta charset='UTF-8'>
         <title>HTML - Matias</title>
 
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
 
     </head>
 
@@ -17,11 +17,11 @@
             <h1>Portfolio - Matías Garrido</h1>
 
             <nav>
-                <a class="sec" href="index.html">Inicio</a>
-                <a class="sec" href="biografia.html">Biografía</a>
+                <a class="sec" href="../index.html">Inicio</a>
+                <a class="main" href="biografia.html">Biografía</a>
                 <a class="sec" href="estudios.html">Estudios</a>
                 <a class="sec" href="experiencia.html">Experiencia</a>
-                <a class="main" href="contacto.html">Contacto</a>
+                <a class="sec" href="contacto.html">Contacto</a>
             </nav>
 
         </header>
