--- a/dir/experiencia.html
+++ b/dir/experiencia.html
@@ -26,6 +26,19 @@
 
         </header>
         
+        <main id="first">
+          
+            <div>
+              <p>Texto información 01</p>
+            </div>
+  
+            <div>
+              <p>Imagen</p>
+              <p>Texto imágen</p>
+            </div>
+  
+        </main>
+  
 
     </body>
 
