--- a/index.html
+++ b/index.html
@@ -55,11 +55,6 @@
             <p>Texto información 01</p>
           </div>
 
-          <div>
-            <p>Imagen</p>
-            <p>Texto imágen</p>
-          </div>
-
         </main>
 
         <main>
@@ -69,7 +64,7 @@
           </div>
 
           <div>
-            <p>Imagen</p>
+            <img src="img/testimg1.png">
             <p>Texto imágen</p>
           </div>
 
