--- a/dir/estudios.html
+++ b/dir/estudios.html
@@ -26,7 +26,19 @@
 
         </header>
         
-
+        <main id="first">
+          
+            <div>
+              <p>Texto información 01</p>
+            </div>
+  
+            <div>
+              <p>Imagen</p>
+              <p>Texto imágen</p>
+            </div>
+  
+        </main>
+  
     </body>
 
 </html>
